syntax = "proto3";

package content.v1;

option go_package = "soa-video-streaming/pkg/pb/content/v1;contentv1";

message Category {
  string id = 1;
  string name = 2;
  int64 updated_at = 3;
}

message GetCategoriesByTimestampRequest {
  int64 from = 1;
  int64 to = 2;
}

message GetCategoriesByTimestampResponse {
  repeated Category categories = 1;
}

message GetMaxTimestampRequest {}

message GetMaxTimestampResponse {
  int64 max_timestamp = 1;
}

service CategoryService {
  rpc GetCategoriesByTimestamp(GetCategoriesByTimestampRequest)
      returns (GetCategoriesByTimestampResponse);

  rpc GetMaxTimestamp(GetMaxTimestampRequest)
      returns (GetMaxTimestampResponse);
}